--- a/notebooks/prep/400_prep_RQ1_Dataframes.ipynb
+++ b/notebooks/prep/400_prep_RQ1_Dataframes.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import math\n",
     "import os.path\n",
     "import numpy as np\n",
     "import pandas as pd"
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +47,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Players</th>\n",
+       "      <th>club</th>\n",
+       "      <th>league</th>\n",
+       "      <th>age</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>potential</th>\n",
+       "      <th>eur_value</th>\n",
+       "      <th>injury_prone_trait</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">16/17</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">15/16</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">14/15</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">13/14</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">12/13</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Form</th>\n",
+       "      <th>Apps</th>\n",
+       "      <th>Form</th>\n",
+       "      <th>Apps</th>\n",
+       "      <th>Form</th>\n",
+       "      <th>Apps</th>\n",
+       "      <th>Form</th>\n",
+       "      <th>Apps</th>\n",
+       "      <th>Form</th>\n",
+       "      <th>Apps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1577</th>\n",
+       "      <td>Ivan Lopez</td>\n",
+       "      <td>Levante UD</td>\n",
+       "      <td>Spanish Primera Division</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>72</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3700000.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.692308</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-inf</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Players        club                    league age nationality  \\\n",
+       "                                                                         \n",
+       "1577  Ivan Lopez  Levante UD  Spanish Primera Division  23       Spain   \n",
+       "\n",
+       "      Position overall potential  eur_value injury_prone_trait 16/17       \\\n",
+       "                                                                Form Apps   \n",
+       "1577  Defender      72        79  3700000.0              False   0.0  0.0   \n",
+       "\n",
+       "         15/16       14/15       13/14      12/13       \n",
+       "          Form  Apps  Form  Apps  Form Apps  Form Apps  \n",
+       "1577  0.692308  13.0  1.56  25.0   0.0  0.0  -inf  0.0  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Players'] == 'Ivan Lopez']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.loc[~((df['16/17']['Form'] == -math.inf) | (df['15/16']['Form'] == -math.inf) | (df['14/15']['Form'] == -math.inf) | (df['13/14']['Form'] == -math.inf) | (df['12/13']['Form'] == -math.inf))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1643,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3922 rows × 20 columns</p>\n",
+       "<p>3917 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1776,10 +1903,10 @@
        "3920  2.440000  25.0  0.000000   0.0  2.937500  16.0  \n",
        "3921  1.650000  20.0  0.000000   0.0  0.000000   0.0  \n",
        "\n",
-       "[3922 rows x 20 columns]"
+       "[3917 rows x 20 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -1798,6 +1925,15 @@
    "source": [
     "df.to_csv('../../data/analysis/RQ1.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
