--- a/notebooks/prep/430_prep_RQ4_Dataframe.ipynb
+++ b/notebooks/prep/430_prep_RQ4_Dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,25 +34,25 @@
     "DF5 = J12_13[['Players','club','league','age','nationality','Position','overall','potential','Apps','Form','skill_moves','Players','Points','Clubs','Position','Start','Goals','A','CS','CS part','Yellow','Red','Sub','CO','Off','Pen SV','Pen M','Goals conceded','Conceded 1+','OG']]\n",
     "DF6 = J17_18[['Players','club','league','age','nationality','Position','overall','potential','Apps','Form','skill_moves','Players','Points','Clubs','Position','Start','Goals','A','CS','CS part','Yellow','Red','Sub','CO','Off','Pen SV','Pen M','Goals conceded','Conceded 1+','OG']]\n",
     "\n",
-    "s1 = J16_17[['Players','club','league','age','nationality','Position','overall','potential','Form','Apps']]\n",
-    "s2 = J15_16[['Players','club','league','age','nationality','Position','overall','potential','Form','Apps']]\n",
-    "s3 = J14_15[['Players','club','league','age','nationality','Position','overall','potential','Form','Apps']]\n",
-    "s4 = J13_14[['Players','club','league','age','nationality','Position','overall','potential','Form','Apps']]\n",
-    "s5 = J12_13[['Players','club','league','age','nationality','Position','overall','potential','Form','Apps']]\n",
-    "s6 = J17_18[['Players','club','league','age','nationality','Position','overall','potential','Form','Apps']]\n",
+    "s1 = J16_17[['Players','club','league','age','nationality','Position','overall','potential','Points','Apps','photo']]\n",
+    "s2 = J15_16[['Players','club','league','age','nationality','Position','overall','potential','Points','Apps','photo']]\n",
+    "s3 = J14_15[['Players','club','league','age','nationality','Position','overall','potential','Points','Apps','photo']]\n",
+    "s4 = J13_14[['Players','club','league','age','nationality','Position','overall','potential','Points','Apps','photo']]\n",
+    "s5 = J12_13[['Players','club','league','age','nationality','Position','overall','potential','Points','Apps','photo']]\n",
+    "s6 = J17_18[['Players','club','league','age','nationality','Position','overall','potential','Points','Apps','photo']]\n",
     "\n",
-    "s1 = s1.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential']).set_index(['Players','club','league','age','nationality','Position','overall','potential'])[['Form','Apps']]\n",
-    "s2 = s2.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential']).set_index(['Players','club','league','age','nationality','Position','overall','potential'])[['Form','Apps']]\n",
-    "s3 = s3.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential']).set_index(['Players','club','league','age','nationality','Position','overall','potential'])[['Form','Apps']]\n",
-    "s4 = s4.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential']).set_index(['Players','club','league','age','nationality','Position','overall','potential'])[['Form','Apps']]\n",
-    "s5 = s5.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential']).set_index(['Players','club','league','age','nationality','Position','overall','potential'])[['Form','Apps']]\n",
-    "s6 = s6.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential']).set_index(['Players','club','league','age','nationality','Position','overall','potential'])[['Form','Apps']]\n",
+    "s1 = s1.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','photo']).set_index(['Players','club','league','age','nationality','Position','overall','potential','photo'])[['Points','Apps']]\n",
+    "s2 = s2.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','photo']).set_index(['Players','club','league','age','nationality','Position','overall','potential','photo'])[['Points','Apps']]\n",
+    "s3 = s3.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','photo']).set_index(['Players','club','league','age','nationality','Position','overall','potential','photo'])[['Points','Apps']]\n",
+    "s4 = s4.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','photo']).set_index(['Players','club','league','age','nationality','Position','overall','potential','photo'])[['Points','Apps']]\n",
+    "s5 = s5.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','photo']).set_index(['Players','club','league','age','nationality','Position','overall','potential','photo'])[['Points','Apps']]\n",
+    "s6 = s6.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','photo']).set_index(['Players','club','league','age','nationality','Position','overall','potential','photo'])[['Points','Apps']]\n",
     "joined = pd.concat([s1,s2,s3,s4,s5,s6], axis=1, keys=('16/17','15/16','14/15','13/14','12/13','17/18')).fillna(0).astype(float).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,19 +97,57 @@
     "\n",
     "joined['Seasons Played'] = joined['count1'] + joined['count2'] + joined['count3'] + joined['count4'] + joined['count5']\n",
     "\n",
-    "joined = joined[joined['Seasons Played']>3] #best players\n",
+    "joined = joined[joined['Seasons Played']>1]\n",
     "\n",
-    "OverallForm = joined['16/17']['Form'] + joined['15/16']['Form'] + joined['14/15']['Form'] + joined['13/14']['Form'] + joined['12/13']['Form']\n",
+    "joined['Overall Points'] = joined['16/17']['Points']+joined['15/16']['Points']+joined['14/15']['Points']+joined['13/14']['Points']+joined['12/13']['Points']\n",
+    "                                \n",
+    "joined['Overall Apps'] = joined['16/17']['Apps']+joined['15/16']['Apps']+joined['14/15']['Apps']+joined['13/14']['Apps']+joined['12/13']['Apps']\n",
     "\n",
-    "joined['Average Form'] = OverallForm/joined['Seasons Played']\n",
-    "\n",
-    "joined.drop(joined.columns[[8,9,10,11,12,13,14,15,16,17,18,19,21,22,23,24,25,26]], axis=1, inplace=True)\n",
+    "joined['Average Form'] = joined['Overall Points']/joined['Overall Apps']\n",
+    "joined.drop(joined.columns[[9,10,11,12,13,14,15,16,17,18,19,20,22,23,24,25,26,27,28,29]], axis=1, inplace=True)\n",
     "joined = joined[np.isfinite(joined['Average Form'])]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "joined.drop(joined.columns[[8,9,10,11,12,13,14,15,16,17,18,19,20,22,23,24,25,26,27,28,29]], axis=1, inplace=True)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Players', ''),\n",
+       " ('club', ''),\n",
+       " ('league', ''),\n",
+       " ('age', ''),\n",
+       " ('nationality', ''),\n",
+       " ('Position', ''),\n",
+       " ('overall', ''),\n",
+       " ('potential', ''),\n",
+       " ('photo', ''),\n",
+       " ('Continent', ''),\n",
+       " ('Average Form', '')]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(joined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +179,7 @@
        "      <th>Position</th>\n",
        "      <th>overall</th>\n",
        "      <th>potential</th>\n",
+       "      <th>photo</th>\n",
        "      <th>Continent</th>\n",
        "      <th>Average Form</th>\n",
        "    </tr>\n",
@@ -156,9 +195,38 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aaron Cresswell</td>\n",
+       "      <td>West Ham United</td>\n",
+       "      <td>English Premier League</td>\n",
+       "      <td>27</td>\n",
+       "      <td>England</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>76</td>\n",
+       "      <td>77</td>\n",
+       "      <td>https://cdn.sofifa.org/18/players/189615.png</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>2.821782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aaron Hughes</td>\n",
+       "      <td>Heart of Midlothian</td>\n",
+       "      <td>Scottish Premiership</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Northern Ireland</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>71</td>\n",
+       "      <td>71</td>\n",
+       "      <td>https://cdn.sofifa.org/18/players/17725.png</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>1.216216</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Aaron Hunt</td>\n",
@@ -169,8 +237,9 @@
        "      <td>Midfielder</td>\n",
        "      <td>76</td>\n",
        "      <td>76</td>\n",
+       "      <td>https://cdn.sofifa.org/18/players/158138.png</td>\n",
        "      <td>Europe</td>\n",
-       "      <td>2.860984</td>\n",
+       "      <td>3.050847</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -182,71 +251,55 @@
        "      <td>Midfielder</td>\n",
        "      <td>77</td>\n",
        "      <td>77</td>\n",
+       "      <td>https://cdn.sofifa.org/18/players/152747.png</td>\n",
        "      <td>Europe</td>\n",
-       "      <td>2.499638</td>\n",
+       "      <td>2.633333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Aaron Ramsey</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>English Premier League</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Wales</td>\n",
+       "      <th>6</th>\n",
+       "      <td>Aaron Niguez</td>\n",
+       "      <td>Real Oviedo</td>\n",
+       "      <td>Spanish Segunda Division</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Spain</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
+       "      <td>73</td>\n",
+       "      <td>73</td>\n",
+       "      <td>https://cdn.sofifa.org/18/players/183853.png</td>\n",
        "      <td>Europe</td>\n",
-       "      <td>3.060384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Abdoulaye Doucoure</td>\n",
-       "      <td>Watford</td>\n",
-       "      <td>English Premier League</td>\n",
-       "      <td>24</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>78</td>\n",
-       "      <td>84</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>2.725833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Abdoulaye Keita</td>\n",
-       "      <td>Le Havre AC</td>\n",
-       "      <td>French Ligue 2</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Mali</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>62</td>\n",
-       "      <td>70</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>1.442857</td>\n",
+       "      <td>1.511628</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Players          club                  league age nationality  \\\n",
-       "                                                                               \n",
-       "2           Aaron Hunt  Hamburger SV       German Bundesliga  30     Germany   \n",
-       "3         Aaron Lennon       Everton  English Premier League  30     England   \n",
-       "8         Aaron Ramsey       Arsenal  English Premier League  26       Wales   \n",
-       "19  Abdoulaye Doucoure       Watford  English Premier League  24      France   \n",
-       "20     Abdoulaye Keita   Le Havre AC          French Ligue 2  23        Mali   \n",
+       "           Players                 club                    league age  \\\n",
+       "                                                                        \n",
+       "0  Aaron Cresswell      West Ham United    English Premier League  27   \n",
+       "1     Aaron Hughes  Heart of Midlothian      Scottish Premiership  37   \n",
+       "2       Aaron Hunt         Hamburger SV         German Bundesliga  30   \n",
+       "3     Aaron Lennon              Everton    English Premier League  30   \n",
+       "6     Aaron Niguez          Real Oviedo  Spanish Segunda Division  28   \n",
        "\n",
-       "      Position overall potential Continent Average Form  \n",
-       "                                                         \n",
-       "2   Midfielder      76        76    Europe     2.860984  \n",
-       "3   Midfielder      77        77    Europe     2.499638  \n",
-       "8   Midfielder      82        83    Europe     3.060384  \n",
-       "19  Midfielder      78        84    Europe     2.725833  \n",
-       "20  Midfielder      62        70    Africa     1.442857  "
+       "        nationality    Position overall potential  \\\n",
+       "                                                    \n",
+       "0           England    Defender      76        77   \n",
+       "1  Northern Ireland    Defender      71        71   \n",
+       "2           Germany  Midfielder      76        76   \n",
+       "3           England  Midfielder      77        77   \n",
+       "6             Spain  Midfielder      73        73   \n",
+       "\n",
+       "                                          photo Continent Average Form  \n",
+       "                                                                        \n",
+       "0  https://cdn.sofifa.org/18/players/189615.png    Europe     2.821782  \n",
+       "1   https://cdn.sofifa.org/18/players/17725.png    Europe     1.216216  \n",
+       "2  https://cdn.sofifa.org/18/players/158138.png    Europe     3.050847  \n",
+       "3  https://cdn.sofifa.org/18/players/152747.png    Europe     2.633333  \n",
+       "6  https://cdn.sofifa.org/18/players/183853.png    Europe     1.511628  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
