--- a/notebooks/prep/400_prep_RQ1_Dataframes.ipynb
+++ b/notebooks/prep/400_prep_RQ1_Dataframes.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 400_prep_RQ1_Dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -15,8 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -32,24 +46,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "s1 = DF1.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']).set_index(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait'])[['Points','Apps']]\n",
-    "s2 = DF2.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']).set_index(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait'])[['Points','Apps']]\n",
-    "s3 = DF3.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']).set_index(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait'])[['Points','Apps']]\n",
-    "s4 = DF4.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']).set_index(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait'])[['Points','Apps']]\n",
-    "s5 = DF5.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']).set_index(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait'])[['Points','Apps']]\n",
-    "s6 = DF6.drop_duplicates(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']).set_index(['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait'])[['Form','Apps']]\n",
-    "RQ1 = pd.concat([s1,s2,s3,s4,s5,s6], axis=1, keys=('16/17','15/16','14/15','13/14','12/13','17/18')).fillna(0).astype(float).reset_index()"
+    "index = ['Players','club','league','age','nationality','Position','overall','potential','eur_value','injury_prone_trait']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "s1 = DF1.drop_duplicates(index).set_index(index)[['Points','Apps']]\n",
+    "s2 = DF2.drop_duplicates(index).set_index(index)[['Points','Apps']]\n",
+    "s3 = DF3.drop_duplicates(index).set_index(index)[['Points','Apps']]\n",
+    "s4 = DF4.drop_duplicates(index).set_index(index)[['Points','Apps']]\n",
+    "s5 = DF5.drop_duplicates(index).set_index(index)[['Points','Apps']]\n",
+    "s6 = DF6.drop_duplicates(index).set_index(index)[['Form','Apps']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "RQ1 = pd.concat([s1,s2,s3,s4,s5,s6], axis=1, keys=('16/17','15/16','14/15','13/14','12/13','17/18')).fillna(0).astype(float).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -103,8 +145,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating New Columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -159,8 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RQ1.loc[RQ1['league'].isin(['Spanish Primera Division','English Premier League','German Bundesliga','French Ligue 1','Italian Serie A']) ,'Plays in Top 5 Leagues']=True\n",
@@ -169,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -180,8 +231,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tidying Up"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -192,8 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "RQ1.drop(RQ1.columns[[10,11,12,13,14,15,16,17,18,19,20,21,22,23,24]], axis=1, inplace=True)"
@@ -201,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1673,7 @@
        "[1791 rows x 15 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
