--- a/notebooks/prep/410_prep_RQ2_Dataframes.ipynb
+++ b/notebooks/prep/410_prep_RQ2_Dataframes.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 400_prep_RQ1_Dataframes"
+    "# 410_prep_RQ1_Dataframes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 680,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 681,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -57,22 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "s1 = DF1.drop_duplicates(index).set_index(index)[finfo]\n",
-    "s2 = DF2.drop_duplicates(index).set_index(index)[finfo]\n",
-    "s3 = DF3.drop_duplicates(index).set_index(index)[finfo]\n",
-    "s4 = DF4.drop_duplicates(index).set_index(index)[finfo]\n",
-    "s5 = DF5.drop_duplicates(index).set_index(index)[finfo]"
+    "s1 = J16_17.drop_duplicates(index).set_index(index)[finfo]\n",
+    "s2 = J15_16.drop_duplicates(index).set_index(index)[finfo]\n",
+    "s3 = J14_15.drop_duplicates(index).set_index(index)[finfo]\n",
+    "s4 = J13_14.drop_duplicates(index).set_index(index)[finfo]\n",
+    "s5 = J12_13.drop_duplicates(index).set_index(index)[finfo]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 683,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 684,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mark\\Desktop\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        " ('Cleen Sheets/Apps', '')]"
       ]
      },
-     "execution_count": 698,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
        "[4828 rows x 16 columns]"
       ]
      },
-     "execution_count": 699,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
