--- a/notebooks/analysis/520_RQ3_Analysis.ipynb
+++ b/notebooks/analysis/520_RQ3_Analysis.ipynb
@@ -1847,19 +1847,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'overrated' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-00aafd23a970>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moverrated_players\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0moverrated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'h...'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0moverrated_players\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0moverrated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'...'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0moverrated_players\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0moverrated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'['\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moverrated_players\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0moverrated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mlst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moverrated_players\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'overrated' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "RQ4Oldies = RQ4Oldies.replace('h...','')\n",
-    "RQ4Oldies = RQ4Oldies.replace('...','')\n",
-    "RQ4Oldies = RQ4Oldies.replace('[','')\n",
-    "RQ4Oldies = RQ4Oldies.replace(',','')\n",
-    "lst = RQ4Oldies.split()\n",
+    "overrated_players= overrated.replace('h...','')\n",
+    "overrated_players= overrated.replace('...','')\n",
+    "overrated_players= overrated.replace('[','')\n",
+    "overrated_players= overrated.replace(',','')\n",
+    "lst = overrated_players.split()\n",
     "data = [lst[pos:pos+6] for pos in range(0, len(lst), 6)]\n",
-    "RQ4Oldies = pd.DataFrame(data[1:], columns=data[0])\n",
-    "RQ4Oldies['Players'] = RQ4Oldies['Players'] +' ' +  RQ4Oldies['Average']\n",
-    "RQ4Oldies = RQ4Oldies.drop('Average',1)"
+    "overrated_players= pd.DataFrame(data[1:], columns=data[0])\n",
+    "overrated ['Players'] = overrated ['Players'] +' ' +  overrated ['Average']\n",
+    "overrated_players= overrated.drop('Average',1)"
    ]
   },
   {
