--- a/notebooks/prep/100_load_&_prep_FIFA18_dataset.ipynb
+++ b/notebooks/prep/100_load_&_prep_FIFA18_dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 100___load__&_prep_FIFA18_dataset\n",
+    "# 100_____load_____&_prep_FIFA18_dataset\n",
     "\n",
     "## Purpose\n",
     "In this notebook we load in our FIFA complete dataset and perform any necessary cleaning. \n",
